--- a/public/index.html
+++ b/public/index.html
@@ -24,19 +24,27 @@
         </div>
 
     </div>
-    <div class="px-8 py-9 ">
+    <div class="px-8 py-9 md:grid grid-cols-2  ">
+        
+       <div>
         <div>
             <h2 class="text-6xl font-semibold">Free PDF(s) for <br>lectures </h2>
         </div>
-        <div class="my-9">
-            <span class="leading-9 text-xl">Free lecture PDF(s) from Osun State University now available for all
-                department and courses with all levels applicable. 100% free </span>
+        <div class="my-11">
+            <span class="leading-9 md:text-2xl text-xl">Free lecture PDF(s) from Osun State University now available for <br> all
+                department and courses with all levels applicable. <br> 100% free </span>
         </div>
-        <div class="flex gap-4">
+        <div class="flex gap-4 md:mt-20">
             <button class="px-6 bg-green-600 py-4 rounded-full font-bold text-white">Dowload PDF</button>
 
             <button class="px-6 bg-blue-600 py-4 rounded-full font-bold text-white">Contact Us</button>
         </div>
+
+       </div>
+       <div class="hidden md:block
+       ">
+        <img src="./asset/hero.png" alt="">
+       </div>
 
 
 
@@ -75,12 +83,13 @@
         </div>
     </div>
 
-    <div class="bg-white px-6">
+    <div class="bg-white py-7 px-6 md:grid grid-cols-2">
+     <div class="">
         <div>
             <h1 class=" py-7 text-5xl space-x-2 ">Welcome To <br> UNIOSUNPEDIA.</h1>
         </div>
         <div>
-            <span class="text-xl">
+            <span class="text-xl px-4">
                <p class="my-6">
                 UniosunPedia is an online platform dedicated to giving you ree lecture PDF(s), saving you the stress of hustling and risk of being left behind in class.
                </p>
@@ -98,6 +107,11 @@
             <button class="px-6 bg-red-600 py-4 rounded-full font-bold text-white">DOWLOAD PDF</button>
             </div>
         </div>
+       
+     </div>
+     <div class="p-8 mt-9 hidden md:block">
+        <img class="rounded-xl" src="./asset/ismail-salad-osman-hajji-dirir-lXvMlLRhOi8-unsplash.jpg" alt="">
+    </div>
 
     </div>
 
