--- a/public/index.html
+++ b/public/index.html
@@ -84,14 +84,14 @@
     </div>
 
     <div class="bg-white py-7 px-6 md:grid grid-cols-2">
-     <div class="">
+     <div class="mt-7">
         <div>
             <h1 class=" py-7 text-5xl space-x-2 ">Welcome To <br> UNIOSUNPEDIA.</h1>
         </div>
-        <div>
-            <span class="text-xl px-4">
+        <div class="md:px-4">
+            <span class="md:text-2xl text-xl ">
                <p class="my-6">
-                UniosunPedia is an online platform dedicated to giving you ree lecture PDF(s), saving you the stress of hustling and risk of being left behind in class.
+                UniosunPedia is an online platform dedicated to giving you free lecture PDF(s), saving you the stress of hustling and risk of being left behind in class.
                </p>
                <p>
                 We've been working hard to make all lecture PDF's available to you at the tip of your fingers. Welcome and let's make our class hustle less. 
