--- a/public/index.html
+++ b/public/index.html
@@ -49,37 +49,36 @@
 
 
     </div>
-    <div class="bg-green-500 px-6 py-7" >
-        <h2 class="text-center text-2xl font-bold text-white">How We work</h2>
-        <div class="  md:grid gap-3 grid-cols-3 ">
+    <div class="bg-green-500 px-6 py-40 md:py-52" >
+        <h2 class="text-center text-7xl font-bold text-white">How We work</h2>
+        <div class="mt-20 md:mt-40  md:grid gap-3 grid-cols-3 ">
             <div class="mt-7">
                 <div>
-                    <h1 class="text-xl font-bold text-white">What we stand for</h1>
+                    <h1 class="text-4xl font-bold text-white">What we stand for</h1>
 
                 </div>
                 <div class="my-7">
-                    <span class="text-gray-100">Doing our part to make lecture material easy to access.PDF(s) from this site are gotton Strictly from Students,Lectures and web </span>
+                    <span class="text-gray-100 text-xl">Doing our part to make lecture material easy to access.PDF(s) from this site are gotton Strictly from Students,Lectures and web </span>
                 </div>
             </div>
             <div class="mt-7">
                 <div>
-                    <h1 class="text-xl font-bold text-white">What we stand for</h1>
+                    <h1 class="text-4xl font-bold text-white">What we stand for</h1>
 
                 </div>
                 <div class="my-7">
-                    <span class="text-gray-100">Doing our part to make lecture material easy to access.PDF(s) from this site are gotton Strictly from Students,Lectures and web </span>
+                    <span class="text-gray-100 text-xl">Doing our part to make lecture material easy to access.PDF(s) from this site are gotton Strictly from Students,Lectures and web </span>
                 </div>
             </div>
             <div class="mt-7">
                 <div>
-                    <h1 class="text-xl font-bold text-white">What we stand for</h1>
+                    <h1 class="text-4xl font-bold text-white">What we stand for</h1>
 
                 </div>
                 <div class="my-7">
-                    <span class="text-gray-100">Doing our part to make lecture material easy to access.PDF(s) from this site are gotton Strictly from Students,Lectures and web </span>
+                    <span class="text-gray-100 text-xl">Doing our part to make lecture material easy to access.PDF(s) from this site are gotton Strictly from Students,Lectures and web </span>
                 </div>
             </div>
-
         </div>
     </div>
 
@@ -112,6 +111,125 @@
      <div class="p-8 mt-9 hidden md:block">
         <img class="rounded-xl" src="./asset/ismail-salad-osman-hajji-dirir-lXvMlLRhOi8-unsplash.jpg" alt="">
     </div>
+
+    </div>
+
+    <div class="bg-green-500 px-6 py-28 md:py-32" >
+        <h2 class="text-center text-7xl font-bold text-white">Available PDF`s</h2>
+        <div class="mt-20  md:grid gap-3 grid-cols-2 ">
+            <div class="mt-7">
+              
+                <div class="my-7">
+                    <span class="text-gray-100 text-2xl">We are working hard to make all lecture PDF`s available for all levels in Osun State University . Incase you have lecture PDF(s) not listed in our PDF Bank, you can share by clicking on the button below. </span>
+                </div>
+                <div class=" py-10">
+                    <button class="px-10 bg-black  py-6 border-none rounded-full font-bold text-white">DONATE PDF(s)</button>
+                </div>
+            </div>
+
+            <div class="bg-white shadow-lg leading-10 px-24  rounded-3xl py-20 text-center">
+                <div class="flex gap-4 mb-4">
+                    <div class="mt-1">
+                        <img src="./asset/check-icon.png" alt="">
+                    </div>
+                    <div>
+                        <a class="text-xl font-bold" href="">100 Level</a>
+                    </div>
+
+                </div>
+
+                <div class="flex gap-4 mb-4">
+                    <div class="mt-1">
+                        <img src="./asset/check-icon.png" alt="">
+                    </div>
+                    <div>
+                        <a class="text-xl font-bold" href="">200 Level</a>
+                    </div>
+
+                </div>
+
+                <div class="flex gap-4 mb-4">
+                    <div class="mt-1">
+                        <img src="./asset/check-icon.png" alt="">
+                    </div>
+                    <div>
+                        <a class="text-xl font-bold" href="">300 Level</a>
+                    </div>
+
+                </div>
+
+                <div class="flex gap-4 mb-4">
+                    <div class="mt-1">
+                        <img src="./asset/check-icon.png" alt="">
+                    </div>
+                    <div>
+                        <a class="text-xl font-bold" href="">400 Level</a>
+                    </div>
+
+                </div>
+
+                <div class="flex gap-4 mb-4">
+                    <div class="mt-1">
+                        <img src="./asset/check-icon.png" alt="">
+                    </div>
+                    <div>
+                        <a class="text-xl font-bold" href="">500 Level</a>
+                    </div>
+
+                </div>
+
+            </div>
+       
+        </div>
+    </div>
+
+    <div class="bg-white px-6 py-28 md:py-32" >
+       <div>
+        <h2 class="text-center text-7xl font-bold ">Our Team</h2>
+       </div>
+       <div class="md:grid  sm:grid-cols-4 gap-8 mt-9 text-center">
+        <div>
+            <div>
+                <img class="rounded-full w-96 h-96" src="./asset/Photo.jpg" alt="">
+            </div>
+            <div class="mt-2">
+                <h2 class="text-3xl text-slate-700 font-semibold">Raji Roqeeb</h2>
+                <span class="text-slate-400 text-xl">CEO</span>
+            </div>
+        </div>
+
+        <div>
+            <div>
+                <img class="rounded-full w-96 h-96" src="./asset/Photo.jpg" alt="">
+            </div>
+            <div class="mt-2">
+                <h2 class="text-3xl text-slate-700 font-semibold">Muhammed Yahaya</h2>
+                <span class="text-slate-400 text-xl">CTO & Backend Developer</span>
+            </div>
+        </div>
+
+        <div>
+            <div>
+                <img class="rounded-full w-96 h-96" src="./asset/Photo.jpg" alt="">
+            </div>
+            <div class="mt-2">
+                <h2 class="text-3xl text-slate-700 font-semibold">King David</h2>
+                <span class="text-slate-400 text-xl">Team Lead & Front-End Developer</span>
+            </div>
+        </div>
+
+        <div>
+            <div>
+                <img class="rounded-full w-96 h-96" src="./asset/Photo.jpg" alt="">
+            </div>
+            <div class="mt-2">
+                <h2 class="text-3xl text-slate-700 font-semibold">Olajide Azeez</h2>
+                <span class="text-slate-400 text-xl">Bloger</span>
+            </div>
+        </div>
+
+       </div>
+
 
     </div>
 
