--- a/public/index.html
+++ b/public/index.html
@@ -147,7 +147,8 @@
                 </div>
             </div>
 
-            <div class="bg-white shadow-lg leading-10 px-24  rounded-3xl py-20 text-center">
+            <div class="bg-white shadow-lg leading-10 px-24 justify-center grid grid-cols-2 rounded-3xl py-20 text-center">
+               <div class="">
                 <div class="flex gap-4 mb-4">
                     <div class="mt-1">
                         <img src="./asset/check-icon.png" alt="">
@@ -167,7 +168,9 @@
                     </div>
 
                 </div>
+               </div>
 
+             <div>
                 <div class="flex gap-4 mb-4">
                     <div class="mt-1">
                         <img src="./asset/check-icon.png" alt="">
@@ -187,16 +190,7 @@
                     </div>
 
                 </div>
-
-                <div class="flex gap-4 mb-4">
-                    <div class="mt-1">
-                        <img src="./asset/check-icon.png" alt="">
-                    </div>
-                    <div>
-                        <a class="text-xl font-bold" href="">500 Level</a>
-                    </div>
-
-                </div>
+             </div>
 
             </div>
        
