--- a/public/index.html
+++ b/public/index.html
@@ -204,7 +204,7 @@
        <div class="md:grid justify-center items-center py-7  md:grid-cols-4 gap-8 mt-9 text-center">
         <div>
             <div class="justify-center items-center flex">
-                <img class="rounded-full w-60 h-60" src="./asset/Photo.jpg" alt="">
+                <img class="rounded-full w-60 h-60" src="https://avatars.githubusercontent.com/u/105174934?v=4" alt="">
             </div>
             <div class="mt-2 ">
                 <h2 class="text-3xl text-slate-700 font-semibold">Raji Roqeeb</h2>
@@ -215,7 +215,7 @@
         <div>
             
             <div class="justify-center items-center flex">
-                <img class="rounded-full  w-60 h-60" src="./asset/Photo.jpg" alt="">
+                <img class="rounded-full  w-60 h-60" src="https://avatars.githubusercontent.com/u/101328329?v=4" alt="">
             </div>
             <div class="mt-2">
                 <h2 class="text-3xl text-slate-700 font-semibold">Muhammed Yahaya</h2>
