added padding to the first div in the about section

--- a/public/index.html
+++ b/public/index.html
@@ -125,10 +125,10 @@
 </div>
   <div class="bg-white  md:grid grid-cols-2">
     
-    <div class="mt-7">
+    <div class="mt-7 py-9">
 
        <div class="md:px-4">
-           <span class="md:text-2xl text-xl ">
+           <span class="md:text-2xl text-xl">
               <p class="my-6">
                UniosunPedia is an online platform dedicated to giving you free lecture PDF(s), saving you the stress of hustling and risk of being left behind in class.
               </p>
