Changed all the text english using qullbot

--- a/public/index.html
+++ b/public/index.html
@@ -61,8 +61,8 @@
          <h2 class="md:text-6xl text-4xl font-semibold">Free PDF(s) for <br>lectures </h2>
      </div>
      <div class="py-9">
-         <span class="leading-9 md:text-2xl text-xl">Free lecture PDF(s) from Osun State University now available for <br> all
-             department and courses with all levels applicable. <br> 100% free </span>
+         <span class="leading-9 md:text-2xl text-xl">Osun State University is currently offering free lecture PDFs <br> for all departments and courses with levels relevant. <br>
+          100% free</span>
      </div>
      <div class="flex gap-4 md:py-8">
          <button class="px-6 bg-green-600 py-4 rounded-md font-bold text-white">Dowload PDF</button>
@@ -90,7 +90,7 @@
 
             </div>
             <div class="my-7">
-                <span class="text-gray-100 text-xl">Doing our part to make lecture material easy to access.PDF(s) from this site are gotton Strictly from Students,Lectures and web </span>
+                <span class="text-gray-100 text-xl">Making the lecture materials accessible is something we are doing. This website's PDFs are gottenton strictly from the web, lectures, and students </span>
             </div>
         </div>
         <div class=" shadow-2xl py-4 text-center h-72  px-4">
@@ -99,7 +99,7 @@
 
             </div>
             <div class="my-7">
-                <span class="text-gray-100 text-xl">Lecture PDF(s) on this website are 100% free and will be updated weekly... swipe down to explore our PDF(s)</span>
+                <span class="text-gray-100 text-xl">This website's lecture PDFs are entirely free and will be updated every week; scroll down to see our PDF selection (s)</span>
             </div>
         </div>
         <div class="shadow-2xl py-4 text-center h-72  px-4">
@@ -108,7 +108,7 @@
 
             </div>
             <div class="my-7">
-                <span class="text-gray-100 text-xl">Connect with us on social Media..... There is always room for improvement! Let's hear from you Guys </span>
+                <span class="text-gray-100 text-xl">Join our social media channels. There's always room to get better! Please respond, guys.</span>
             </div>
         </div>
     </div>
@@ -130,13 +130,13 @@
        <div class="md:px-4">
            <span class="md:text-2xl text-xl">
               <p class="my-6">
-               UniosunPedia is an online platform dedicated to giving you free lecture PDF(s), saving you the stress of hustling and risk of being left behind in class.
+                With the help of UniosunPedia, you can get free lecture PDFs without having to rush or worry about falling behind in class.
               </p>
               <p>
-               We've been working hard to make all lecture PDF's available to you at the tip of your fingers. Welcome and let's make our class hustle less. 
+                We have been putting a lot of effort into providing you with instant access to all lecture PDFs. Hello, and let's reduce the hustling in class.
               </p>
               <p class="my-6">
-               Our Mobile app will soon be available or download. click the button below to dowload yours and get started with UniosunPedia. Dont forget to share with friends 
+                Soon, you will be able to download or access our mobile app. In order to download your copy and begin using UniosunPedia, click the button below. Remember to share with your friends
               </p>
 
 
@@ -164,7 +164,7 @@
         <div class="mt-7">
           
             <div class="my-7">
-                <span class="text-gray-100 text-2xl">We are working hard to make all lecture PDF`s available for all levels in Osun State University . Incase you have lecture PDF(s) not listed in our PDF Bank, you can share by clicking on the button below. </span>
+                <span class="text-gray-100 text-2xl">We are doing a lot of effort to make all lecture PDFs at Osun State University available. If your lecture PDFs aren't already available in our PDF Bank, you can share them by using the button below.</span>
             </div>
             <div class=" py-10">
                 <button class="px-10 bg-black  py-6 border-none rounded-full font-bold text-white">DONATE PDF(s)</button>
