--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 <body class="bg-white w-full ">
 <!-- header -->
 <header class="flex flex-wrap sm:justify-start sm:flex-nowrap z-50 w-full bg-white text-sm py-4 dark:bg-gray-800">
-    <nav class=" w-full mx-auto px-12 sm:flex sm:items-center sm:justify-between py-3  box shadow-lg " aria-label="Global">
+    <nav class=" w-full mx-auto px-12 sm:flex sm:items-center sm:justify-between py-3 my-10 box shadow-lg  fixed top-0 bg-white" aria-label="Global">
       <div class="flex items-center justify-between">
         <a class="flex-none text-xl font-semibold dark:text-white" href="#"><span class="text-xl">Uniosun <span class="text-green-700">Pedia</span></span></a>
         <div class="sm:hidden ">
@@ -51,7 +51,7 @@
 <!-- /header -->
 
    <!-- hero -->
-   <div class="md:px-8 py-11 px-4    grid md:grid-cols-1 lg:grid-cols-2  ">
+   <div class="md:px-8 py-11 px-4 mt-24   grid md:grid-cols-1 lg:grid-cols-2  ">
     <div class="hidden lg:block">
       <img src="./asset/AdobeStock_504954575_Preview-removebg-preview.png" alt="">
      </div>
@@ -238,6 +238,16 @@
              <span class="text-slate-400 text-xl">CEO</span>
          </div>
      </div>
+     <div class="mb-5">
+         <div class="justify-center items-center flex ">
+             <img class="rounded-lg   w-60 h-60"  class="shadow-lg" src="./asset/IMG-20230131-WA0076(1).jpg" alt="">
+         </div>
+         <div class="mt-2">
+             <h2 class="text-3xl text-slate-700 font-semibold">King Davies</h2>
+             <span class="text-slate-400 text-xl">Team Lead & Front-End Developer & CFO</span>
+         </div>
+     </div>
+
 
      <div class="mb-5">
          
@@ -250,15 +260,6 @@
          </div>
      </div>
 
-     <div class="mb-5">
-         <div class="justify-center items-center flex">
-             <img class="rounded-full  w-60 h-60" src="./asset/Photo.jpg" alt="">
-         </div>
-         <div class="mt-2">
-             <h2 class="text-3xl text-slate-700 font-semibold">King David</h2>
-             <span class="text-slate-400 text-xl">Team Lead & Front-End Developer</span>
-         </div>
-     </div>
 
      <div class="mb-5">
          <div class="justify-center items-center flex">
