--- a/public/index.html
+++ b/public/index.html
@@ -276,7 +276,7 @@
 
      <div class="mb-5">
          <div class="justify-center items-center flex">
-             <img class="rounded-full  w-60 h-60" src="./asset/Photo.jpg" alt="">
+             <img class="rounded-full rotate-45  w-60 h-60" src="./asset/IMG-20230409-WA0050.jpg" alt="">
          </div>
          <div class="mt-2">
              <h2 class="text-3xl text-slate-700 font-semibold">Olajide Azeez</h2>
