--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
 <header class="flex flex-wrap sm:justify-start sm:flex-nowrap z-50 w-full bg-white text-sm py-4 dark:bg-gray-800">
     <nav class=" w-full mx-auto px-8 sm:flex sm:items-center sm:justify-between py-3 mb-10 box shadow-lg  fixed top-0 bg-white z-50"  aria-label="Global">
       <div class="flex items-center justify-between">
-        <a class="flex-none text-xl font-semibold dark:text-white" href="#"><span class="text-xl">Uniosun <span class="text-green-700">Pedia</span></span></a>
+        <a class="flex-none text-xl font-semibold dark:text-white flex" href="#"><img class="w-10 rounded-md h-10" src="./asset/book.jpg" alt=""><span class="text-xl mt-2 px-1">Uniosun <span class="text-green-700">Pedia</span></span></a>
+        
         <div class=" lg:hidden">
           <button type="button" class=" hs-collapse-toggle p-2 inline-flex justify-center items-center gap-2 rounded-md border font-medium bg-white text-gray-700 shadow-sm align-middle hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-white focus:ring-blue-600 transition-all text-sm dark:bg-slate-900 dark:hover:bg-slate-800 dark:border-gray-700 dark:text-gray-400 dark:hover:text-white dark:focus:ring-offset-gray-800" data-hs-collapse="#navbar-with-collapse" aria-controls="navbar-with-collapse" aria-label="Toggle navigation">
             <svg class="hs-collapse-open:hidden w-4 h-4" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
