--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
     <h2 class="text-center text-2xl md:text-5xl font-bold text-white ">How We work</h2>
     <div class="mt-20 md:mt-20  md:grid gap-3 grid-cols-3 ">
         <div class="shadow-2xl py4 text-center h-72  px-4 " data-aos="fade-up"
-        data-aos-anchor-placement="center-bottom"">
+        data-aos-anchor-placement="center-bottom">
             <div class="mt-10">
                 <h1 class="text-4xl font-bold text-white">What we stand for</h1>
 
