--- a/public/level-pdf-single.html
+++ b/public/level-pdf-single.html
@@ -15,7 +15,7 @@
 
 
 
-    <title>Dowload PdF</title>
+    <title>100l PdF</title>
 </head>
 <body>
   <header class="flex flex-wrap sm:justify-start sm:flex-nowrap z-50 w-full bg-white text-sm py-4 dark:bg-gray-800">
@@ -49,18 +49,39 @@
      
     </nav>
   </header>
-      <div class="md:mt-32 mt-20 px-6 ">
-        <h1 class="text-7xl text-slate-600">Download PDF(s)
+      <div class="md:mt-32 mt-20 px-6 py-4 md:grid ">
+        <h1 class="xl:text-9xl text-7xl text-slate-600">100l PDF(s)
         </h1>
       </div>
+      <div class="sm:hidden px-5  ">
+        <label for="tabs" class="sr-only">Select your country</label>
+        <select id="tabs" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+            <option>All</option>
+            <option>First Semester</option>
+            <option>Second Semester</option>
+        </select>
+    </div>
+    <ul class="hidden text-sm font-medium text-center text-gray-500 divide-x mt-6   divide-gray-200 rounded-lg shadow sm:flex dark:divide-gray-700 dark:text-gray-400">
+        <li class="w-full">
+            <a href="#" class="inline-block w-full p-4 text-gray-900 bg-gray-100 rounded-l-lg focus:ring-4 focus:ring-blue-300 active focus:outline-none dark:bg-gray-700 dark:text-white" aria-current="page">All</a>
+        </li>
+        <li class="w-full">
+            <a href="#" class="inline-block w-full p-4 bg-white hover:text-gray-700 hover:bg-gray-50 focus:ring-4 focus:ring-blue-300 focus:outline-none dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700">First Semester</a>
+        </li>
+        <li class="w-full">
+            <a href="#" class="inline-block w-full p-4 bg-white hover:text-gray-700 hover:bg-gray-50 focus:ring-4 focus:ring-blue-300 focus:outline-none dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700">Second Semester</a>
+        </li>
+
+    </ul>
+    
       <div class="grid lg:grid-cols-3 xl:grid-cols-4 md:grid-cols-2 grid-cols-1 gap-10 px-6 text-center my-6">
-       <a class="hover:opacity-40" href="./level-pdf-single.html">
+       <a class="hover:opacity-40" href="">
         <div class="">
           <div class="justify-center items-center flex">
               <img class="rounded-2xl" src="./asset/100l pic.jpg" alt="">
           </div>
           <div class="my-4">
-              <span class="text-2xl font-bold text-slate-700 ">100l</span>
+              <span class="text-2xl font-bold text-slate-700 ">MTH 101</span>
           </div>
       </div>
        </a>
@@ -71,7 +92,7 @@
               <img class="rounded-2xl" src="./asset/300l pic.jpg" alt="">
           </div>
           <div class="my-4">
-              <span class="text-2xl font-bold text-slate-700 ">200l</span>
+              <span class="text-2xl font-bold text-slate-700 ">MTH 105</span>
           </div>
       </div>
        </a>
@@ -82,7 +103,7 @@
             <img class="rounded-2xl" src="./asset/200l.jpg" alt="">
         </div>
         <div class="my-4">
-            <span class="text-2xl font-bold text-slate-700 ">300l</span>
+            <span class="text-2xl font-bold text-slate-700 ">GNS 101</span>
         </div>
     </div>
      </a>
@@ -93,7 +114,7 @@
               <img class="rounded-2xl" src="./asset/500l.jpg" alt="">
           </div>
           <div class="my-4">
-              <span class="text-2xl font-bold text-slate-700 ">400l</span>
+              <span class="text-2xl font-bold text-slate-700 ">PHY 101</span>
           </div>
       </div>
       </a>
@@ -104,10 +125,40 @@
                 <img class="rounded-2xl" src="./asset/400l.jpg" alt="">
             </div>
             <div class="my-4">
-                <span class="text-2xl font-bold text-slate-700 ">Donate</span>
+                <span class="text-2xl font-bold text-slate-700 ">CHM 101</span>
             </div>
         </div>
         </a>
+        <a class="hover:opacity-40" href="">
+            <div class="">
+              <div class="justify-center items-center flex">
+                  <img class="rounded-2xl" src="./asset/400l.jpg" alt="">
+              </div>
+              <div class="my-4">
+                  <span class="text-2xl font-bold text-slate-700 ">CSC 101</span>
+              </div>
+          </div>
+          </a>
+          <a class="hover:opacity-40" href="">
+            <div class="">
+              <div class="justify-center items-center flex">
+                  <img class="rounded-2xl" src="./asset/400l.jpg" alt="">
+              </div>
+              <div class="my-4">
+                  <span class="text-2xl font-bold text-slate-700 ">GNS 211</span>
+              </div>
+          </div>
+          </a>
+          <a class="hover:opacity-40" href="">
+            <div class="">
+              <div class="justify-center items-center flex">
+                  <img class="rounded-2xl" src="./asset/400l.jpg" alt="">
+              </div>
+              <div class="my-4">
+                  <span class="text-2xl font-bold text-slate-700 ">GNS 103</span>
+              </div>
+          </div>
+          </a>
 
       </div>
 
