--- a/public/level-pdf-single.html
+++ b/public/level-pdf-single.html
@@ -50,7 +50,7 @@
     </nav>
   </header>
       <div class="md:mt-32 mt-20 px-6 py-4 md:grid ">
-        <h1 class="xl:text-9xl text-7xl text-slate-600">100l PDF(s)
+        <h1 class=" text-7xl text-slate-600">100l PDF(s)
         </h1>
       </div>
       <div class="sm:hidden px-5  ">
@@ -75,7 +75,7 @@
     </ul>
     
       <div class="grid lg:grid-cols-3 xl:grid-cols-4 md:grid-cols-2 grid-cols-1 gap-10 px-6 text-center my-6">
-       <a class="hover:opacity-40" href="">
+       <a class="hover:opacity-40" href="" >
         <div class="">
           <div class="justify-center items-center flex">
               <img class="rounded-2xl" src="./asset/100l pic.jpg" alt="">
