--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
       <div id="navbar-with-collapse" class=" text-xl hidden basis-full grow md:block">
         <div class="flex flex-col gap-5 mt-5 sm:flex-row sm:items-center sm:justify-end sm:mt-0 sm:pl-5">
           <a class=" text-blue-500" href="#" aria-current="page" style="font-size:1.1rem;">Home</a>
-          <a class=" text-gray-600 hover:text-gray-400 dark:text-gray-400 dark:hover:text-gray-500" href="/public/pd.html" style="font-size:1.1rem;">Dowload PDF</a>
+          <a class=" text-gray-600 hover:text-gray-400 dark:text-gray-400 dark:hover:text-gray-500" href="../public/level-pdf-single.html" style="font-size:1.1rem;">Dowload PDF</a>
           <a class=" text-gray-600 hover:text-gray-400 dark:text-gray-400 dark:hover:text-gray-500" href="#" style="font-size:1.1rem;">Blogs</a>
           <a class=" text-gray-600 hover:text-gray-400 dark:text-gray-400 dark:hover:text-gray-500" href="#" style="font-size:1.1rem;">Contact Us</a>
 
