--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
       <div id="navbar-with-collapse" class=" text-xl hidden basis-full grow md:block">
         <div class="flex flex-col gap-5 mt-5 sm:flex-row sm:items-center sm:justify-end sm:mt-0 sm:pl-5">
           <a class=" text-blue-500" href="#" aria-current="page" style="font-size:1.1rem;">Home</a>
-          <a class=" text-gray-600 hover:text-gray-400 dark:text-gray-400 dark:hover:text-gray-500" href="../public/level-pdf-single.html" style="font-size:1.1rem;">Dowload PDF</a>
+          <a class=" text-gray-600 hover:text-gray-400 dark:text-gray-400 dark:hover:text-gray-500" href="../public/pd.html" style="font-size:1.1rem;">Dowload PDF</a>
           <a class=" text-gray-600 hover:text-gray-400 dark:text-gray-400 dark:hover:text-gray-500" href="#" style="font-size:1.1rem;">Blogs</a>
           <a class=" text-gray-600 hover:text-gray-400 dark:text-gray-400 dark:hover:text-gray-500" href="#" style="font-size:1.1rem;">Contact Us</a>
 
@@ -61,11 +61,11 @@
 
    <!-- hero -->
    <div class="md:px-8 py-11 px-4 mt-5   grid md:grid-cols-1 lg:grid-cols-2  " > 
-    <div class="hidden lg:block">
+    <div class="hidden lg:block" data-aos="fade-up" >
       <img src="./asset/AdobeStock_504954575_Preview-removebg-preview.png" alt="">
      </div>
  
-    <div>
+    <div class="" data-aos="zoom-in">
      <div>
          <h2 class="md:text-6xl text-4xl font-semibold">Free PDF(s) for <br>lectures </h2>
      </div>
@@ -95,7 +95,7 @@
    <!-- how we work section -->
 
 <div class="max-w-[1250px]  mx-auto">
-  <div class="bg-green-500 px-6 py-20  rounded-xl " >
+  <div class="bg-green-500 px-6 py-20  rounded-xl " data-aos="zoom-out" >
     <h2 class="text-center text-2xl md:text-5xl font-bold text-white ">How We work</h2>
     <div class="mt-20 md:mt-20  md:grid gap-3 grid-cols-3 ">
         <div class="shadow-2xl py4 text-center h-72  px-4 " data-aos="fade-up"
@@ -300,19 +300,19 @@ class="bg-neutral-100 text-center text-neutral-600 dark:bg-neutral-600 dark:text
   class="flex items-center justify-center border-b-2 border-neutral-200 p-6 dark:border-neutral-500 lg:justify-between">
   <div class="mr-12  block">
     <div class="fixed bottom-4 right-4">
-      <button id="chatbot-btn" class="fixed z-90 bottom-10 right-8 bg-blue-600 w-20 h-20 rounded-full drop-shadow-lg flex justify-center items-center text-white text-4xl hover:bg-blue-700 hover:drop-shadow-2xl hover:animate-bounce duration-300">&#9993;</button>
+      <button id="chatbot-btn" class="fixed z-90 bottom-10 right-8 bg-blue-600 w-20 h-20 rounded-full drop-shadow-lg flex justify-center items-center text-white text-4xl hover:bg-blue-700 hover:drop-shadow-2xl animate-bounce duration-300">&#9993;</button>
     </div>
     
     <div id="chatbot-container" class="fixed bottom-16 right-4 w-96 bg-white shadow-lg rounded-lg p-4 hidden">
       <div class="h-64 overflow-y-scroll">
         <!-- Chat messages go here -->
         <div class="my-2">
-          <span class="bg-blue-500 text-white py-1 px-2 rounded-full inline-block">UniosunBot</span>
+          <span class="bg-blue-500 text-white py-1 px-2 rounded-full inline-block">UB</span>
           <span class="bg-gray-200 py-1 px-2 rounded-full inline-block">Hello! How can I help you?</span>
         </div>
       </div>
       <form class="mt-4">
-        <input type="text" placeholder="Type your message" class="w-full border border-gray-300 rounded-lg py-2 px-4">
+        <input type="text" placeholder="Type your question..." class="w-full border border-gray-300 rounded-lg py-2 px-4">
         <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg mt-2 float-right">Send</button>
       </form>
     </div>
