--- a/public/index.html
+++ b/public/index.html
@@ -101,26 +101,26 @@
         <div class="shadow-2xl py4 text-center h-72  px-4 " data-aos="fade-up"
         data-aos-anchor-placement="center-bottom">
             <div class="mt-10">
-                <h1 class="text-4xl font-bold text-white">What we stand for</h1>
+                <h1 class="text-4xl font-bold pt-10 text-white">What we stand for</h1>
 
             </div>
             <div class="my-7">
-                <span class="text-gray-100 text-xl">Making the lecture materials accessible is something we are doing. This website's PDFs are gottenton strictly from the web, lectures, and students </span>
+                <span class="text-gray-100 text-xl py-8">Making the lecture materials accessible is something we are doing. This website's PDFs are gottenton strictly from the web, lectures, and students </span>
             </div>
         </div>
         <div class=" shadow-2xl py-4 text-center h-72  px-4" data-aos="zoom-in">
             <div>
-                <h1 class="text-4xl font-bold text-white">Updating Always....</h1>
+                <h1 class="text-4xl font-bold pt-10 text-white">Updating Always....</h1>
 
             </div>
             <div class="my-7">
                 <span class="text-gray-100 text-xl">This website's lecture PDFs are entirely free and will be updated every week; scroll down to see our PDF selection (s)</span>
             </div>
         </div>
-        <div class="shadow-2xl py-4 text-center h-72  px-4" data-aos="fade-up"
+        <div class="shadow-2xl py-4 text-center h-72  px-4" data-aos="zoom-in"
         data-aos-anchor-placement="center-bottom"> 
             <div>
-                <h1 class="text-4xl font-bold text-white">Share your Thoughts</h1>
+                <h1 class="text-4xl pt-10 font-bold text-white">Share your Thoughts</h1>
 
             </div>
             <div class="my-7">
@@ -135,7 +135,7 @@
 
   <!-- about -->
 
-<div class="mt-6 px-4">
+<div class="mt-6 px-4" data-aos="fade-up">
   <div class="flex justify-center items-center">
     <h1 class=" py-7 text-5xl font-bold space-x-2 ">Welcome To  UNIOSUNPEDIA.</h1>
 </div>
@@ -245,7 +245,7 @@
      <h2 class="text-center text-4xl md:text-7xl font-bold ">Our Team</h2>
     </div>
     <div class="grid  md:grid-cols-3 lg:grid-cols-4 sm:grid-cols-2 justify-center items-center py-7  gap-8 mt-9 text-center">
-     <div class="mb-5" >
+     <div class="mb-5" data-aos="fade-up" >
          <div class="justify-center items-center flex">
              <img class="rounded-full w-60 h-60" src="https://avatars.githubusercontent.com/u/105174934?v=4" alt="">
          </div>
@@ -254,7 +254,7 @@
              <span class="text-slate-400 text-xl">CEO & Team Lead </span>
          </div>
      </div>
-     <div class="mb-5">
+     <div class="mb-5" data-aos="zoom-in">
          <div class="justify-center items-center flex ">
              <img class="rounded-full   w-60 h-60"  class="shadow-lg" src="./asset/IMG-20230131-WA0076(1).jpg" alt="">
          </div>
@@ -265,7 +265,7 @@
      </div>
 
 
-     <div class="mb-5">
+     <div class="mb-5" data-aos="fade-up">
          
          <div class="justify-center items-center flex">
              <img class="rounded-full  w-60 h-60" src="https://avatars.githubusercontent.com/u/101328329?v=4" alt="">
@@ -277,7 +277,7 @@
      </div>
 
 
-     <div class="mb-5">
+     <div class="mb-5" data-aos="zoom-out">
          <div class="justify-center items-center flex">
              <img class="rounded-full rotate-45  w-60 h-60" src="./asset/IMG-20230409-WA0050.jpg" alt="">
          </div>
