--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <title>uniosunpedia</title>
 </head>
 
-<body class="bg-white w-full ">
+<body class="bg-white w-full overflow-x-hidden">
 <!-- header -->
 <header class="flex flex-wrap sm:justify-start sm:flex-nowrap z-50 w-full bg-white text-sm py-4 dark:bg-gray-800">
     <nav class=" w-full mx-auto px-8 sm:flex sm:items-center sm:justify-between py-3 mb-10 box shadow-lg  fixed top-0 bg-white z-50"  aria-label="Global">
@@ -65,7 +65,7 @@
       <img src="./asset/AdobeStock_504954575_Preview-removebg-preview.png" alt="">
      </div>
  
-    <div class="" data-aos="zoom-in">
+    <div class="" >
      <div>
          <h2 class="md:text-6xl text-4xl font-semibold">Free PDF(s) for <br>lectures </h2>
      </div>
