--- a/src/level-pdf-single.html
+++ b/src/level-pdf-single.html
@@ -77,7 +77,7 @@
   </ul>
   
     <div class="grid lg:grid-cols-3 xl:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-10 px-6 text-center my-6 ">
-     <a class="" data-aos="fade-up" href="" >
+     <a class="" data-aos="fade-up" href="./subject-single.html" >
       <div class="">
         <div class="justify-center items-center flex  inset-0 bg-black  hover:opacity-50 transition-opacity">
             <img class="rounded-md" src="./asset/100l pic.jpg" alt="">
