--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,7 @@
           </li>
           <li>
             <a href="./pd.html"
-              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Dowload
-              PDF(s)</a>
+              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
           </li>
           <li>
             <a href="#"
@@ -54,7 +53,7 @@
           </li>
           <li>
             <a href="#"
-              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Pricing</a>
+              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Blog</a>
           </li>
           <li>
             <a href="#"
@@ -195,7 +194,7 @@
 
   <div class=" bg-gray-100  pt-20   gap-4 grid md:grid-cols-1 lg:grid-cols-2 ">
     <div>
-      <img class="w-[50]" src="./asset/Group 8781.png" alt="">
+      <img class="w-[2000px]" src="./asset/Group 8781.png" alt="">
     </div>
     <div class="px-8 mb-6 text-right">
       <div class="mb-48">
