--- a/src/about.html
+++ b/src/about.html
@@ -15,8 +15,13 @@
    <div>
     <img src="/src/asset/THOU.png" alt="">
    </div>
-   <ul class="flex md:space-x-6">
-    <li><a href="index.html" class="text-">Home</a></li>
+   <ul class="flex md:space-x-8 font-semibold font-inter">
+    <li><a href="index.html" class="text-links">Home</a></li>
+    <li><a href="index.html" class="text-links">about</a></li>
+    <li><a href="index.html" class="text-links">Services</a></li>
+    <li><a href="index.html" class="text-links">Blog</a></li>
+    <li><a href="index.html" class="text-links">Contact</a></li>
+    <li><a href="index.html" class="text-links">Courses</a></li>
    </ul>
   </nav>
 
