course-single pagedone

--- a/src/course-single.html
+++ b/src/course-single.html
@@ -181,48 +181,70 @@
      
      <div class="p-4 sm:ml-64">
         <div class="p-4  rounded-lg dark:border-gray-700">
-           <div class="grid md:grid-cols-2 gap-9 mb-4 text-white">
-              <a href="./course-single.html">
-               <div data-aos="fade-up" class=" py-5 px-6 h-36 rounded-md bg-green-700 dark:bg-gray-800 ">
-                  <h2 class="md:text-2xl text-xl font-bold ">📄 Set theory</h2>
-                  <p class="text-sm mt-6 text-gray-200">All questions related to set theory.</p>
-               </div>
-              </a>
-              <div data-aos="zoom-in" class=" py-5 px-6 h-36 rounded-md bg-green-700 dark:bg-gray-800 ">
-                <h2 class="md:text-2xl text-xl font-bold ">📄 Ap and Gp</h2>
-                <p class="text-sm mt-6 text-gray-200">All questions related to arithmetic and geometric.</p>
+            <div class="mb-5">
+                <div>
+                    <h1 class="text-3xl font-bold">Set Theory</h1>
+                </div>
+                <div class="my-4">
+                    <span class="italic">Select the year you wish to download</span>
+                </div>
+            </div>
+           <div class="grid md:grid-cols-2 gap-9 mb-4 ">
+              <div data-aos="fade-up" class=" py-5 px-6 h-36 rounded-md bg-white border-4 border-green-700  dark:bg-gray-800 ">
+                 <h2 class="md:text-2xl text-xl font-bold ">📄 2009</h2>
+                 <p class="text-sm mt-6 text-gray-600">All questions related to set theory.</p>
+              </div>
+              <div data-aos="zoom-in" class=" py-5 px-6 h-36 rounded-md bg-white border-4 border-green-700  dark:bg-gray-800 ">
+                <h2 class="md:text-2xl text-xl font-bold ">📄  2010</h2>
+                <p class="text-sm mt-6 text-gray-600">All questions related to arithmetic and geometric.</p>
              </div>
-             <div data-aos="fade-up" class=" py-5 px-6 h-36  rounded-md bg-green-700 dark:bg-gray-800 ">
-                <h2 class="md:text-2xl text-xl font-bold ">📄 Permutations and combinations</h2>
-                <p class="text-sm mt-6 text-gray-200">All questions related to permutation and combination.</p>
+             <div data-aos="fade-up" class=" py-5 px-6 h-36  rounded-md bg-white border-4 border-green-700  dark:bg-gray-800 ">
+                <h2 class="md:text-2xl text-xl font-bold ">📄  2011</h2>
+                <p class="text-sm mt-6 text-gray-600">All questions related to permutation and combination.</p>
              </div>
-             <div data-aos="zoom-in" class=" py-5 px-6 h-36 rounded-md bg-green-700 dark:bg-gray-800 ">
-                <h2 class="md:text-2xl text-xl font-bold ">📄 Binomial expansion</h2>
-                <p class="text-sm mt-6 text-gray-200">All questions related to binomial expansion</p>
+             <div data-aos="zoom-in" class=" py-5 px-6 h-36 rounded-md bg-white border-4 border-green-700  dark:bg-gray-800 ">
+                <h2 class="md:text-2xl text-xl font-bold ">📄  2012</h2>
+                <p class="text-sm mt-6 text-gray-600">All questions related to binomial expansion</p>
              </div>
-             <div data-aos="fade-up" class=" py-5 px-6 h-36 rounded-md bg-green-700 dark:bg-gray-800 ">
-                <h2 class="md:text-2xl text-xl font-bold ">📄 Mathematical Induction</h2>
-                <p class="text-sm mt-6 text-gray-200">All questions related to mathematical induction.</p>
+             <div data-aos="fade-up" class=" py-5 px-6 h-36 rounded-md bg-white border-4 border-green-700  dark:bg-gray-800 ">
+                <h2 class="md:text-2xl text-xl font-bold ">📄 2013</h2>
+                <p class="text-sm mt-6 text-gray-600">All questions related to mathematical induction.</p>
              </div>
-             <div data-aos="zoom-in" class=" py-5 px-6 h-36 rounded-md bg-green-700 dark:bg-gray-800 ">
-                <h2 class="md:text-2xl text-xl font-bold ">📄 Trigonometry</h2>
-                <p class="text-sm mt-6 text-gray-200">All questions related to trigonometry.</p>
+             <div data-aos="zoom-in" class=" py-5 px-6 h-36 rounded-md bg-white border-4 border-green-700 dark:bg-gray-800 ">
+                <h2 class="md:text-2xl text-xl font-bold ">📄 2014</h2>
+                <p class="text-sm mt-6 text-gray-600">All questions related to trigonometry.</p>
              </div>
-             <div data-aos="fade-up" class=" py-5 px-6 h-36 rounded-md bg-green-700 dark:bg-gray-800 ">
-                <h2 class="md:text-2xltext-xl font-bold ">📄 Calculus- Differentiation</h2>
-                <p class="text-sm mt-6 text-gray-200">All questions related to calculus- differentiation.</p>
+             <div data-aos="fade-up" class=" py-5 px-6 h-36 rounded-md bg-white border-4 border-green-700  dark:bg-gray-800 ">
+                <h2 class="md:text-2xltext-xl font-bold ">📄 2015</h2>
+                <p class="text-sm mt-6 text-gray-600">All questions related to calculus- differentiation.</p>
              </div>
-             <div data-aos="zoom-in" class=" py-5 px-6 h-36 rounded-md bg-green-700 dark:bg-gray-800 ">
-                <h2 class="md:text-2xl text-xl font-bold ">📄 Partial Fractions</h2>
-                <p class="text-sm mt-6 text-gray-200">All questions related to partial fractions.</p>
+             <div data-aos="zoom-in" class=" py-5 px-6 h-36 rounded-md bg-white border-4 border-green-700  dark:bg-gray-800 ">
+                <h2 class="md:text-2xl text-xl font-bold ">📄  2016</h2>
+                <p class="text-sm mt-6 text-gray-600">All questions related to partial fractions.</p>
              </div>
-             <div data-aos="zoom-in" class=" py-5 px-6 h-36 rounded-md bg-green-700 dark:bg-gray-800 ">
-                <h2 class="md:text-2xl text-xl font-bold ">📄 Matrix</h2>
-                <p class="text-sm mt-6 text-gray-200">All questions related to matrix.</p>
+             <div data-aos="zoom-in" class=" py-5 px-6 h-36 rounded-md bg-white border-4 border-green-700  dark:bg-gray-800 ">
+                <h2 class="md:text-2xl text-xl font-bold ">📄 2017</h2>
+                <p class="text-sm mt-6 text-gray-600">All questions related to matrix.</p>
              </div>
-             <div data-aos="zoom-in" class=" py-5 px-6 h-36 rounded-md bg-green-700 dark:bg-gray-800 ">
-                <h2 class="md:text-2xl text-xl font-bold ">📄 Equation</h2>
-                <p class="text-sm mt-6 text-gray-200">All questions related to equation.</p>
+             <div data-aos="zoom-in" class=" py-5 px-6 h-36 rounded-md bg-white border-4 border-green-700  dark:bg-gray-800 ">
+                <h2 class="md:text-2xl text-xl font-bold ">📄  2018</h2>
+                <p class="text-sm mt-6 text-gray-600">All questions related to equation.</p>
+             </div>
+             <div data-aos="zoom-in" class=" py-5 px-6 h-36 rounded-md bg-white border-4 border-green-700  dark:bg-gray-800 ">
+                <h2 class="md:text-2xl text-xl font-bold ">📄  2019</h2>
+                <p class="text-sm mt-6 text-gray-600">All questions related to equation.</p>
+             </div>
+             <div data-aos="zoom-in" class=" py-5 px-6 h-36 rounded-md bg-white border-4 border-green-700  dark:bg-gray-800 ">
+                <h2 class="md:text-2xl text-xl font-bold ">📄  2020</h2>
+                <p class="text-sm mt-6 text-gray-600">All questions related to equation.</p>
+             </div>
+             <div data-aos="zoom-in" class=" py-5 px-6 h-36 rounded-md bg-white border-4 border-green-700  dark:bg-gray-800 ">
+                <h2 class="md:text-2xl text-xl font-bold ">📄  2021</h2>
+                <p class="text-sm mt-6 text-gray-600">All questions related to equation.</p>
+             </div>
+             <div data-aos="zoom-in" class=" py-5 px-6 h-36 rounded-md bg-white border-4 border-green-700  dark:bg-gray-800 ">
+                <h2 class="md:text-2xl text-xl font-bold ">📄  2022</h2>
+                <p class="text-sm mt-6 text-gray-600">All questions related to equation.</p>
              </div>
              
            </div>
