feat: add new font

--- a/src/about.html
+++ b/src/about.html
@@ -15,16 +15,21 @@
    <div>
     <img src="/src/asset/THOU.png" alt="">
    </div>
-   <ul class="flex md:space-x-8 font-semibold font-inter">
+   <ul class="flex md:space-x-8 font-bold font-inter">
     <li><a href="index.html" class="text-links">Home</a></li>
-    <li><a href="index.html" class="text-links">about</a></li>
-    <li><a href="index.html" class="text-links">Services</a></li>
-    <li><a href="index.html" class="text-links">Blog</a></li>
-    <li><a href="index.html" class="text-links">Contact</a></li>
-    <li><a href="index.html" class="text-links">Courses</a></li>
+    <li><a href="/" class="text-links">about</a></li>
+    <li><a href="services.html" class="text-links">Services</a></li>
+    <li><a href="blog.html" class="text-links">Blog</a></li>
+    <li><a href="contact.html" class="text-links">Contact</a></li>
+    <li><a href="courses.html" class="bg-[#00A396] text-white p-2 rounded-md">Courses</a></li>
    </ul>
   </nav>
-
+<div class="w-[50%] mx-auto mt-12 text-center">
+  <h1 class="text-5xl text-white mb-6">About Us </h1>
+  <p class="text-white text-[25px] ">we’re a community that comes together to bring 
+innovation with the means of technology and 
+creativity, in university of Osun state. .</p>
+</div>
 </header>
 </body>
 </html>
