--- a/src/about.html
+++ b/src/about.html
@@ -10,7 +10,7 @@
     <title>About us</title>
 </head>
 <body class="">
-<header style="background-image: url(/src/asset/about-bg.png);"  class="bg-cover bg-no-repeat bg-center h-[500px]">
+<header style="background-image: url(/src/asset/about-bg.png);"  class="bg-cover bg-no-repeat bg-center h-[100vh]">
 <nav class="bg-transparent py-5 w-full md:w-[80%] z-10 mx-auto flex justify-between items-center">
    <div>
     <img src="/src/asset/THOU.png" alt="">
@@ -24,9 +24,9 @@
     <li><a href="courses.html" class="bg-[#00A396] text-white p-2 rounded-md">Courses</a></li>
    </ul>
   </nav>
-<div class="w-[50%] mx-auto mt-12 text-center">
-  <h1 class="text-5xl text-white mb-6">About Us </h1>
-  <p class="text-white text-[25px] ">we’re a community that comes together to bring 
+<div class="w-[50%] mx-auto mt-24 text-center font-montserrat">
+  <h1 class="text-5xl text-white mb-6 font-bold">About <span class="text-[#00CCBB]">Us</span>  </h1>
+  <p class="text-white text-[25px] font-normal">we’re a community that comes together to bring 
 innovation with the means of technology and 
 creativity, in university of Osun state. .</p>
 </div>
