--- a/src/about.html
+++ b/src/about.html
@@ -24,7 +24,7 @@
     <li><a href="courses.html" class="bg-[#00A396] text-white p-2 rounded-md">Courses</a></li>
    </ul>
   </nav>
-<div class="w-[50%] mx-auto mt-24 text-center font-montserrat">
+<div class="w-[50%] mx-auto mt-[20%] text-center font-montserrat">
   <h1 class="text-5xl text-white mb-6 font-bold">About <span class="text-[#00CCBB]">Us</span>  </h1>
   <p class="text-white text-[25px] font-normal">we’re a community that comes together to bring 
 innovation with the means of technology and 
