feat: modify files

--- a/src/about.html
+++ b/src/about.html
@@ -24,12 +24,28 @@
     <li><a href="courses.html" class="bg-[#00A396] text-white p-2 rounded-md">Courses</a></li>
    </ul>
   </nav>
-<div class="w-[50%] mx-auto mt-[20%] text-center font-montserrat">
+<div class="w-[50%] mx-auto mt-[15%] text-center font-montserrat">
   <h1 class="text-5xl text-white mb-6 font-bold">About <span class="text-[#00CCBB]">Us</span>  </h1>
   <p class="text-white text-[25px] font-normal">we’re a community that comes together to bring 
 innovation with the means of technology and 
 creativity, in university of Osun state. .</p>
 </div>
 </header>
+<main class="flex justify-between">
+  <div>
+    <h1>OUR MISSION</h1>
+    <p>Our mission is to bring together 
+student of like minds with a passion 
+driven mind to join hands together to 
+build a digital and advance world.</p>
+  </div>
+  <div >
+    <div class="flex">
+      <img src="/src/asset/mission-1.png" alt="" >
+      <img src="/src/asset/mission-2.png" alt="">
+    </div>
+    <img src="/src/asset/mission-3.png" alt="">
+  </div>
+</main>
 </body>
 </html>
