--- a/src/about.html
+++ b/src/about.html
@@ -31,10 +31,10 @@ innovation with the means of technology and
 creativity, in university of Osun state. .</p>
 </div>
 </header>
-<main class="flex justify-between">
+<main class="flex justify-between font-montserrat">
   <div>
-    <h1>OUR MISSION</h1>
-    <p>Our mission is to bring together 
+    <h1 class="text-[#005C54] font-bold text-3xl">OUR MISSION</h1>
+    <p class="">Our mission is to bring together 
 student of like minds with a passion 
 driven mind to join hands together to 
 build a digital and advance world.</p>
