services page done

--- a/src/about.html
+++ b/src/about.html
@@ -17,8 +17,8 @@
    </div>
    <ul class="flex md:space-x-8 font-bold font-inter">
     <li><a href="index.html" class="text-links">Home</a></li>
-    <li><a href="/" class="text-links">about</a></li>
-    <li><a href="services.html" class="text-links">Services</a></li>
+    <li><a href="about.html" class="text-links">about</a></li>
+    <li><a href="service.html" class="text-links">Services</a></li>
     <li><a href="blog.html" class="text-links">Blog</a></li>
     <li><a href="contact.html" class="text-links">Contact</a></li>
     <li><a href="courses.html" class="bg-[#00A396] text-white p-2 rounded-md">Courses</a></li>
