--- a/src/about.html
+++ b/src/about.html
@@ -31,20 +31,18 @@ innovation with the means of technology and
 creativity, in university of Osun state. .</p>
 </div>
 </header>
-<main class="flex justify-between font-montserrat">
-  <div>
+<main >
+  <div class="flex justify-between font-montserrat items-center w-[90%] mx-auto">
+    <div class="w-[40%]">
     <h1 class="text-[#005C54] font-bold text-3xl">OUR MISSION</h1>
-    <p class="">Our mission is to bring together 
+    <p class="text-black text-xl">Our mission is to bring together 
 student of like minds with a passion 
 driven mind to join hands together to 
 build a digital and advance world.</p>
-  </div>
-  <div >
-    <div class="flex">
-      <img src="/src/asset/mission-1.png" alt="" >
-      <img src="/src/asset/mission-2.png" alt="">
     </div>
-    <img src="/src/asset/mission-3.png" alt="">
+    <div class="w-[40%]">
+      <img src="./asset/mission.png" alt="" class="w-[100%]">
+    </div>
   </div>
 </main>
 </body>
