--- a/src/blog.html
+++ b/src/blog.html
@@ -33,7 +33,7 @@
   </div>
 </div>
 </header>
-<main >
+<main class="mb-32">
   <div class="flex justify-between font-montserrat items-center w-[90%] mx-auto py-8">
   <div class="py-2 border-b-2 w-full">
     <ul class="flex gap-7 text-sm  ">
@@ -49,7 +49,7 @@
   </div>
    
   </div>
-  <div class=" md:w-[90%] mx-auto grid gap-4 grid-cols-3">
+  <div class=" md:w-[90%] mx-auto grid gap-4 grid-cols-3 mb-20">
     <div class="my-4 mb-3 ">
      <div>
       <img src="./asset/Rectangle 52.png" alt="">
@@ -111,5 +111,63 @@
     <button class="bg-green-500 text-white px-7 py-2 rounded-md text-sm">Load More</button>
   </div>
 </main>
+<div class="py-2  bg-green-600 text-white text-xl">
+  <marquee>Learn more with us . All years available . Past questions made available for you . Made by the student
+    council . Curriculum flexible to fit your time . Here for you . UniOsun, your place</marquee>
+
+</div>
+
+<footer class="bg-green-800 px-7 py-20 text-white">
+  <div class="mb-4">
+    <img src="./asset/THOU (1).png" alt="">
+  </div>
+  <div class="grid grid-cols-3 mt-10">
+    <div>
+      <div class="mb-4">
+        <h1 class="text-xl font-bold">Pages</h1>
+      </div>
+      <ul class="space-y-4">
+        <li><a href="">Home</a></li>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Service</a></li>
+        <li><a href="">Contact Us</a></li>
+      </ul>
+
+    </div>
+
+    <div>
+      <div class="mb-4">
+        <h1 class="text-xl font-bold">Social Handles</h1>
+      </div>
+      <ul class="space-y-4">
+        <li><a href="">Facebook</a></li>
+        <li><a href="">Instagram</a></li>
+        <li><a href="">Twitter</a></li>
+        <li><a href="">Telegram</a></li>
+      </ul>
+
+    </div>
+
+    <div class="">
+      <div class="mb-4">
+        <h1 class="text-xl font-bold">Don’t Miss Out!</h1>
+      </div>
+      <div class="mb-4">
+        <span class="text-md text-right">
+          Don't miss out an update sign up with your mail to get the tech update from us.
+        </span>
+      </div>
+      <div class="flex mt-8">
+        <input class="grow" type="text" name="" id="">
+        <button class="text-sm px-2 bg-green-600 rounded-tr-lg rounded-br-lg">Subscribe</button>
+      </div>
+     
+
+    </div>
+
+  </div>
+
+  
+</footer>
 </body>
 </html>
