--- a/src/about.html
+++ b/src/about.html
@@ -32,18 +32,23 @@ creativity, in university of Osun state. .</p>
 </div>
 </header>
 <main >
-  <div class="flex justify-between font-montserrat items-center w-[90%] mx-auto">
-    <div class="w-[40%]">
-    <h1 class="text-[#005C54] font-bold text-3xl">OUR MISSION</h1>
-    <p class="text-black text-xl">Our mission is to bring together 
+  <div class="flex  flex-col md:flex-row justify-between font-montserrat items-center w-[80%] mx-auto mt-10 md:space-x-9">
+    <div class="text-center md:text-left md:w-[50%]">
+    <h1 class="text-[#005C54] font-bold text-3xl mb-2">OUR MISSION</h1>
+    <p class="text-black text-xl md:max-w-sm">Our mission is to bring together 
 student of like minds with a passion 
 driven mind to join hands together to 
 build a digital and advance world.</p>
     </div>
-    <div class="w-[50%]">
+    <div class="md:w-[50%]">
       <img src="./asset/mission.png" alt="" class="w-[100%]">
     </div>
   </div>
 </main>
+<aside class="flex  flex-col md:flex-row justify-between font-montserrat items-center w-[80%] mx-auto mt-10 md:space-x-9">
+  <div class="">
+      <img src="./asset/vision.png" alt="" class="w-[50%]">
+    </div>
+</aside>
 </body>
 </html>
